@@ -243,8 +243,6 @@ see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
 
   /* decContext routines					      */
 
-  #include "decContextSymbols.h"
-
   #ifdef __cplusplus
   extern "C" {
   #endif
