@@ -1,44 +1,0 @@
-#if !defined(DECCONTEXTSYMBOLS)
-#define DECCONTEXTSYMBOLS
-
-#ifdef IN_LIBGCC2
-#define decContextClearStatus __decContextClearStatus
-#define decContextDefault __decContextDefault
-#define decContextGetRounding __decContextGetRounding
-#define decContextGetStatus __decContextGetStatus
-#define decContextRestoreStatus __decContextRestoreStatus
-#define decContextSaveStatus __decContextSaveStatus
-#define decContextSetRounding __decContextSetRounding
-#define decContextSetStatus __decContextSetStatus
-#define decContextSetStatusFromString __decContextSetStatusFromString
-#define decContextSetStatusFromStringQuiet __decContextSetStatusFromStringQuiet
-#define decContextSetStatusQuiet __decContextSetStatusQuiet
-#define decContextStatusToString __decContextStatusToString
-#define decContextTestSavedStatus __decContextTestSavedStatus
-#define decContextTestStatus __decContextTestStatus
-#define decContextZeroStatus __decContextZeroStatus
-#define DECPOWERS __decPOWERS
-#define DECSTICKYTAB __decSTICKYTAB
-#endif
-
-#ifdef __STDC_DEC_FP__
-#define decContextClearStatus ___decContextClearStatus
-#define decContextDefault ___decContextDefault
-#define decContextGetRounding ___decContextGetRounding
-#define decContextGetStatus ___decContextGetStatus
-#define decContextRestoreStatus ___decContextRestoreStatus
-#define decContextSaveStatus ___decContextSaveStatus
-#define decContextSetRounding ___decContextSetRounding
-#define decContextSetStatus ___decContextSetStatus
-#define decContextSetStatusFromString ___decContextSetStatusFromString
-#define decContextSetStatusFromStringQuiet ___decContextSetStatusFromStringQuiet
-#define decContextSetStatusQuiet ___decContextSetStatusQuiet
-#define decContextStatusToString ___decContextStatusToString
-#define decContextTestSavedStatus ___decContextTestSavedStatus
-#define decContextTestStatus ___decContextTestStatus
-#define decContextZeroStatus ___decContextZeroStatus
-#define DECPOWERS ___decPOWERS
-#define DECSTICKYTAB ___decSTICKYTAB
-#endif
-
-#endif
